hpcc update