@@ -30,8 +30,8 @@
  * @requires vm.gc.Z
  * @run main/othervm -Dsun.java2d.uiScale=1 LargeWindowPaintTest
  * @run main/othervm -Dsun.java2d.uiScale=1 -Dsun.java2d.d3d=false LargeWindowPaintTest
- * @run main/othervm -XX:+UseBridgeGC -Dsun.java2d.uiScale=1 LargeWindowPaintTest
- * @run main/othervm -XX:+UseBridgeGC -Dsun.java2d.uiScale=1 -Dsun.java2d.d3d=false LargeWindowPaintTest
+ * @run main/othervm -XX:+UseZGC -Dsun.java2d.uiScale=1 LargeWindowPaintTest
+ * @run main/othervm -XX:+UseZGC -Dsun.java2d.uiScale=1 -Dsun.java2d.d3d=false LargeWindowPaintTest
  */
 
 import java.awt.Color;
